tests/baselines/reference/parametersSyntaxErrorNoCrash3.errors.txt
parametersSyntaxErrorNoCrash3.ts(3,17): error TS2391: Function implementation is missing or not immediately following the declaration.
parametersSyntaxErrorNoCrash3.ts(3,17): error TS7010: 'getHtml', which lacks return-type annotation, implicitly has an 'any' return type.
parametersSyntaxErrorNoCrash3.ts(4,11): error TS2300: Duplicate identifier '(Missing)'.
parametersSyntaxErrorNoCrash3.ts(4,11): error TS2842: '(Missing)' is an unused renaming of 'return'. Did you intend to use it as a type annotation?
parametersSyntaxErrorNoCrash3.ts(4,13): error TS1005: ':' expected.
parametersSyntaxErrorNoCrash3.ts(4,22): error TS2300: Duplicate identifier '(Missing)'.
parametersSyntaxErrorNoCrash3.ts(4,22): error TS2842: '(Missing)' is an unused renaming of '" string"'. Did you intend to use it as a type annotation?
parametersSyntaxErrorNoCrash3.ts(5,1): error TS1005: ':' expected.
parametersSyntaxErrorNoCrash3.ts(5,2): error TS1005: ')' expected.


==== parametersSyntaxErrorNoCrash3.ts (9 errors) ====
    // https://github.com/microsoft/TypeScript/issues/59449
    
    export function getHtml({
                    ~~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
                    ~~~~~~~
!!! error TS7010: 'getHtml', which lacks return-type annotation, implicitly has an 'any' return type.
        return  " string" // a long string;
              
!!! error TS2300: Duplicate identifier '(Missing)'.
              
!!! error TS2842: '(Missing)' is an unused renaming of 'return'. Did you intend to use it as a type annotation?
!!! related TS2843 parametersSyntaxErrorNoCrash3.ts:5:2: We can only write a type for 'return' by adding a type for the entire parameter here.
                ~~~~~~~~~
!!! error TS1005: ':' expected.
                         
!!! error TS2300: Duplicate identifier '(Missing)'.
                         
!!! error TS2842: '(Missing)' is an unused renaming of '" string"'. Did you intend to use it as a type annotation?
!!! related TS2843 parametersSyntaxErrorNoCrash3.ts:5:2: We can only write a type for '" string"' by adding a type for the entire parameter here.
    }
    ~
!!! error TS1005: ':' expected.
     
!!! error TS1005: ')' expected.